# skeleton_tracker

./: CMakeLists.txt  README.md  setup_nite.bash
include/skeleton_tracker/: xtion_tracker.hpp
src/: skeleton_tracker_node.cpp  xtion_tracker_node.cpp
srv/: skeletonsrv.srv
